[package]
name = "logistic-regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
ndarray = "0.15.3"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.0", features = ["cuda"] }
anyhow = "1.0.40"
clap = "4.5.1"
