[package]
name = "logistic-regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
ndarray = "0.15.3"
candle = { git = "https://github.com/huggingface/candle", package = "candle-core"}
anyhow = "1.0.40"
clap = {version = "4.3.1", features = ["derive"]} 
candle-nn = { version = "0.4.0", features = ["cuda"] }
candle-datasets = "0.4.0"
rand = "0.8.5"
