[package]
name = "self-intention"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.40"
csv = "1.1.6"
clap = { version = "4.5.1", features = ["derive"] }
rand = "0.8.5"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.2", features = [
    "cuda",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.8.2" }
